<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:gravity="center"
    tools:context="com.example.c15333.kotlinproject.MainActivity">

    <LinearLayout
        android:id="@+id/text_view_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:textAlignment="center"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username" />

        <TextView
            android:id="@+id/password_text_view"
            android:paddingTop="@dimen/margin"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/edit_text_layout"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/username_edit_text"
            android:hint="@string/username_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/password_edit_text"
            android:inputType="textPassword"
            android:hint="@string/password_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

<Button
    android:id="@+id/login_button"
    android:text="@string/button_login"
    style="@style/Widget.AppCompat.Button.Borderless"
    android:layout_marginTop="@dimen/button_margin_top"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />

</LinearLayout>
